--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
   },
   "dependencies": {
     "@walletconnect/web3-provider": "^1.7.0",
-    "next": "latest",
+    "bootstrap": "^5.1.3",
+    "moralis": "^0.0.176",
+    "next": "^12.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-moralis": "^0.3.8",
+    "react-moralis": "^0.3.11",
     "react-router-dom": "^6.2.1"
   },
   "devDependencies": {
